--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6, .navbar {
 .frosty h1 {
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 100;
-   text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+  text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
 }
 
 .frosty h2 {
@@ -46,4 +46,17 @@ h1, h2, h3, h4, h5, h6, .navbar {
 
 .btn {
   border-radius: 0;
+}
+
+.feature {
+  width: 100%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+body {
+  background:image_url('dark-honeycomb.png');
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+  color: white;
+
 }
