--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -4,13 +4,18 @@
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 200;
   box-shadow: 0px 1px 2px #2a2a2a;
-  background: image_url('dark-honeycomb.png')
+  background: image_url('dark-honeycomb.png');
 }
 
 .navbar-inverse a.navbar-brand {
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 100;
   color: white;
+  margin-top: -10px;
+}
+
+.nav-link {
+  margin-top: -7px;
 }
 
 .hero {
@@ -68,5 +73,5 @@ body {
   background: #fff;
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  padding: 10px
+  padding: 10px;
 }
