--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -65,10 +65,11 @@ body {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
-  background: #bbb;
+  background: white;
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 10px;
+  color: black
 }
 
 .help-block {
@@ -81,4 +82,8 @@ body {
 
 .clr {
   clear: both;
+}
+
+.img-fluid {
+  width: 200px;
 }
