--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -10,6 +10,9 @@
     </h2>
     <br />
     <div class="row">
+      <div class="col-sm-12 col-12">
+        <%= image_tag course.image_url.to_s, class: 'img-fluid' %>
+      </div>
       <div class="col-sm-8 col-12">
         <%= course.description %>
       </div>
