--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,6 +3,8 @@
 <div class="booyah-box col-10 offset-1">
   <h1><%= @course.title %></h1>
   <br />
+  <%= image_tag @course.image_url.to_s, class: 'img-fluid' %>
+  <br />
   <div class="row">
     <div class="col-sm-4 col-12 text center">
       <span class="badge badge-default">
@@ -12,7 +14,7 @@
       <% if current_user && current_user == @course.user %>
       <br />
       <br />
-      <%= link_to 'Administrater', instructor_course_path(@course), class: 'btn btn-danger btn large' %>
+      <%= link_to 'Administrater', instructor_course_path(@course), class: 'btn btn-danger btn large float-right' %>
       <% end %>
     </div>
 
