--- a/app/views/instructor/courses/new.html.erb
+++ b/app/views/instructor/courses/new.html.erb
@@ -4,7 +4,8 @@
   <%= simple_form_for @course, url: instructor_courses_path do |f| %>
     <%= f.input :title %>
     <%= f.input :description %>
-    <%=f.input :cost %>
+    <%= f.input :cost %>
+    <%= f.input :image %>
     <br />
     <%= f.submit "Create", class: 'btn btn-primary' %>
   <% end %>
