--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -86,3 +86,26 @@ body {
 
 .img-fluid {
 }
+
+.lesson {
+  background-color:black;
+  margin-top: 10px;
+  height: 130px;
+  font-size: 15px;
+}
+
+.section {
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 20px;
+}
+
+.lesson a {
+  color:white;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
+}
+
+.lesson a b {
+  font-weight: 100;
+  font-size: 25px;
+}
