--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -13,10 +13,19 @@
       </span>
     </div>
       <% if current_user && current_user == @course.user %>
-    <div class="col">
-      <%= link_to 'Administrater', instructor_course_path(@course), class: 'btn btn-danger btn large float-right' %>
+        <br />
+        <br />
+        <%= link_to 'Administrater', instructor_course_path(@course), class: 'btn btn-danger btn large float-right' %>
+      <% end %>
+
+      <br />
+      <br />
+      <% if current_user && current_user.enrolled_in?(@course) %>
+        <h3 class="badge badge-info">You Are Enrolled!</h3>
+      <% else %>
+        <%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
+      <% end %>
     </div>
-    <% end %>
 
     <div class="col-sm-8 col-12">
       <%= @course.description %>
