--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -3,6 +3,7 @@
   <h1 class="text-center"><%= current_course.title %></h1>
   <br />
   <%= image_tag @course.image_url.to_s, class: 'img-fluid' %>
+  <br />
   <%= link_to 'Preview As Student', course_path(current_course), class: 'btn btn-warning float-right' %>
   <br class="clr" />
 
@@ -16,7 +17,7 @@
         <%= section.title %>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
         <ul>
-          <% section.lessons.each do |lesson| %>
+          <% section.lessons.rank(:row_order).each do |lesson| %>
             <li>
               <b><%= lesson.title %></b>
               -
