--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -113,3 +113,42 @@ body {
 .badge, .badge-info{
   margin-left: 10px;
 }
+
+ul {
+  list-style-type:none;
+}
+
+.section-li {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 20px;
+  margin: 20px;
+}
+
+ul .header {
+  font-size: 25px;
+}
+
+ul .header .fa {
+  font-size: 20px;
+}
+
+.lessons li {
+  background: black;
+  color:white;
+  margin: 10px;
+  margin-right: 100px;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
+  padding: 8px;
+  font-size:15px;
+}
+
+.lesson li b {
+  font-size: 25px;
+  font-weight: 100;
+}
+
+.lesson li p {
+  margin: 0px;
+}
