--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -4,7 +4,6 @@
       var lessonUrl = $( event.target).data('lesson-url');
       $('#newLessonForm').attr('action', lessonUrl);
     });
-
     $('.lessons').sortable({
       update: function( event, ui ) {
         $.ajax({
@@ -15,7 +14,6 @@
         });
       }
     });
-
     $('.sections').sortable({
       update: function( event, ui ) {
         $.ajax({
@@ -45,7 +43,7 @@
     </button>
   </div>
 
-  <ul class="section">
+  <ul class="sections">
     <% current_course.sections.rank(:row_order).each do |section| %>
       <li data-update-url="<%= instructor_section_path(section)  %>" class="section-li">
         <div class="header">
@@ -60,7 +58,7 @@
         <br class="clr" />
         <ul class="lessons">
           <% section.lessons.rank(:row_order).each do |lesson| %>
-            <li data-item-url="<%= instructor_lesson_path(lesson) %>">
+            <li data-update-url="<%= instructor_lesson_path(lesson) %>">
               <div class="row">
                 <div class="col-1">
                   <br />
