finished Flixter (all bugs fixed)

--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -5,23 +5,27 @@
       $('#newLessonForm').attr('action', lessonUrl);
     });
     $('.lessons').sortable({
-      update: function( event, ui ) {
-        $.ajax({
-          type: 'PUT',
-          url: ui.item.data('update-url'),
-          dataType: 'json',
-          data: { lesson: { row_order_position: ui.item.index() } }
-        });
+      update: function(event, ui){
+      for(let item of ui.item.context.parentNode.children){
+          $.ajax({
+            type: 'PUT',
+            url: $(item).data('update-url'),
+            dataType: 'json',
+            data: { lesson: { row_order_position: $(item).index() } }
+          });
+        }
       }
     });
     $('.sections').sortable({
-      update: function( event, ui ) {
-        $.ajax({
-          type: 'PUT',
-          url: ui.item.data('update-url'),
-          dataType: 'json',
-          data: { section: { row_order_position: ui.item.index() } }
-        });
+      update: function(event, ui){
+      for(let item of ui.item.context.parentNode.children){
+          $.ajax({
+            type: 'PUT',
+            url: $(item).data('update-url'),
+            dataType: 'json',
+            data: { section: { row_order_position: $(item).index() } }
+          });
+        }
       }
     });
   });
